--- a/scr/less/header.less
+++ b/scr/less/header.less
@@ -15,38 +15,53 @@
             color: white;
             font-size: 16px;
             line-height: 25px;
-            padding: 47px 10px;
+            padding: 47px 10px 30px 10px;
             position:relative;
-            &:hover .header-nav-li-drop-down{
-                display: block;
-            }
-            >a{
-                float: left;
-               }
+            height: 25px;
             
-            >img{
-                float: left;
-                padding-top:0px ;
+            >a{
+                display: inline-block;
+                line-height: 25px;
+                >span{
+                    display: inline-block;
+                    height: 25px;
+                    width: 25px;
+                    float: left;
+                }
+                >h3{
+                    list-style: none;
+                    margin: 0;
+                    float: left;
+                    font-size: 16px;
+                }   
             }
             .header-nav-li-drop-down{
                 list-style: none;
                 padding: 0;
                 margin: 0;
                 background-color: #2c1c40;
-                margin-top:25px;
+            
                 display: none;
                 position: absolute;
                 top: 50px;
                 left:10px;
                 z-index: 1;
+                padding: 10px 10px 10px 10px;
+                top:90px;
                 >li{
                     height: 25px;
                     width: 89px;
                     text-align: center;
-                }
-            } 
-        }
-    }
+                    &:hover{
+                        background-color: deepskyblue;
+                    }
+                    >a:hover:after{
+                        content: url(../../dist/img/images/nav_li_bg.png);
+                        float: right;
+                    }
+                } 
+            }
+    }   }
 }
 .public{
     width: 1080px;
