--- a/scr/less/homepage.less
+++ b/scr/less/homepage.less
@@ -3,10 +3,64 @@
 .banner{
     width: 100%;
     position: relative;
-    >img{
+    .banner-bg{
        width: 100%; 
        display: block;
        
+    }
+    .banner-animate{
+        
+        .banner-bg-a{
+            position: absolute;
+            left: 0px;
+            top:175px;
+        }
+        .banner-bg-b{
+            position: absolute;
+            right: 0px;
+            top:250px;
+        }
+        .banner-bg-c{
+            position: absolute;
+            left: 620px;
+            top:300px;
+        }
+    }
+    .banner-animate1{
+        
+        .banner-bg-d{
+            position: absolute;
+            left: 0px;
+            top:175px;
+        }
+        .banner-bg-e{
+            position: absolute;
+            right: 0px;
+            top:38px;
+        }
+        .banner-bg-f{
+            position: absolute;
+            left: 340px;
+            top:190px;
+        }
+    }
+    .banner-animate2{
+        
+        .banner-bg-g{
+            position: absolute;
+            left: 0px;
+            top:175px;
+        }
+        .banner-bg-h{
+            position: absolute;
+            right: 0px;
+            top:250px;
+        }
+        .banner-bg-c{
+            position: absolute;
+            left: 620px;
+            top:300px;
+        }
     }
         .banner-bottom{
             width: 220px;
