--- a/scr/less/homepage.less
+++ b/scr/less/homepage.less
@@ -107,6 +107,9 @@
 .main{
     width: 100%;
     background-color: #f1f2f6;
+    padding-bottom: 50px;
+    position: relative;
+    height:837px;
     .main-head{
         margin: 0 auto;
         width: 58px;
@@ -114,6 +117,193 @@
         padding-top: 50px;
     }
     .main-title{
+        margin: 0 auto;
+       
+        text-align: center;
+        padding-top: 40px;
+        
+        >h3{
+            list-style: none;
+            color: #2f1948;
+            font-size: 50px;
+            padding: 0;
+            margin: 0;
+            letter-spacing: 4px;
+        }
+        >p{
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            color: #2f1948;
+            font-size: 18px;
+        }
+        >div{
+            width: 50px;
+            margin: 0 auto;
+            padding-top: 10px;
+            >span{
+              display: block; 
+              height: 10px;
+              width: 10px;
+              border-radius: 100%;
+              background-color: #8db5d9; 
+              float: left;
+              margin-left: 5px;
+              
+            }
+        }
+    }
+    .main-all{
+        position: relative;
+    }
+    .main-text{
+        left:0;
+        position: absolute;
+        padding-top: 50px;
+        
+        .main-text-left{
+            width: 370px;
+            float: left;
+            padding: 0px 20px 0 80px;
+        }
+        .main-bottom-right{
+            float: right;
+            width: 600px;
+            position: absolute;
+            top:50px;
+            left: 485px;
+            .main-bottom-right-head{
+       
+               
+                >span{
+                    color: #614d66;
+                    font-size: 30px;
+                    display:block;
+                    float: left;
+                    color: #311759;
+                }
+                .pen{
+                    float: right;
+                }
+                .pen-line{
+                    float: left;
+                }
+            }
+            .main-bottom-right-main{
+                padding-top: 20px;
+                >img{
+                    float: left;
+                    padding-top: 20px;
+                }
+                .main-bottom-right-main-text{
+                    float: right;
+                    >h3{
+                        font-size: 24px;
+                        color: #565559;
+                        margin-bottom: 0px;
+                    }
+                    >p{
+                       
+                        width: 450px;
+                        font-size: 15px;
+                        line-height: 20px;
+                        color: #565559; 
+                    }
+                    
+                }
+            }
+            .main-bottom-right-center{
+                padding: 30px 0;
+                position: absolute;
+                right:35px;
+                top:215px;
+                .main-bottom-right-center-left{
+                    float: left;
+                }
+                .main-bottom-right-center-right{
+                    float: right;
+                }
+                .line{
+                    width: 540px;
+                    height: 0px;
+                    border-bottom: 1px dashed #D0D0D0;
+                    margin-left: 30px;
+                    padding-bottom: 14px;
+                }
+            }
+            .main-bottom-right-bottom{
+                padding-top:80px ;
+                p{
+                    font-size: 15px;
+                    margin: 0;
+                    line-height: 24px;
+                    color: #565559;
+                }
+            }
+            .main-bottom-right-img{
+                height: 60px;
+                width: 100%;
+                padding-top:20px ;
+                line-height: 60px;
+                span{
+                    font-size: 18px;
+                    color: #565559;
+                }
+                .Quotes-left{
+                    float: right;
+                    padding-top: 40px;
+                }
+                .Quotes-right{
+                    float: right;
+                    
+                }
+                &>span{
+                    float: right;
+                }
+            }
+        }
+    }
+    .main-nav{
+        width: 19px;
+        height:380px;
+        left: 270px;
+        top:325px;
+        background-image: url(../../dist/img/images/main-line.png);
+        background-repeat: repeat-y;
+        background-position-x: 9px;
+        position: absolute;
+        .main-nav-span{
+            height: 76px;
+            width: 19px;
+            text-align: center;
+            font-size: 0;
+            &>span{
+                display: inline-block;
+                width: 11px;
+                height: 11px;
+                background: url(../../dist/img/images/main-nav.png);
+                
+                &:hover{
+                      background-position-y:-11px;
+                      transition: background-position-y 0.3s;
+                }
+            }
+           
+            .acc{
+                    display: inline-block;
+                    width: 19px;
+                    height: 19px;
+                    background-image: url(../../dist/img/images/main-nav-now.png);
+                }
+            }
+        }
+    
+}
+.about{
+    width: 100%;
+    background: url("../../dist/img/images/about_bg.jpg");
+    background-size: 100%;
+    .about-title{
         margin: 0 auto;
         width: 120px;
         text-align: center;
@@ -150,25 +340,23 @@
             }
         }
     }
-    .main-text{
+    .about-text{
         padding-top: 50px;
-        .main-text-left{
+        .about-text-left{
             width: 370px;
             float: left;
             padding: 0 30px;
         }
-        .main-bottom-right{
+        .about-bottom-right{
             float: left;
             width: 600px;
-            .main-bottom-right-head{
-       
-               
+            .about-bottom-right-head{
                 >span{
                     color: #614d66;
-                    font-size: 18px;
+                    font-size: 30px;
                     display:block;
                     float: left;
-                    
+                    color: #311759;
                 }
                 .pen{
                     float: right;
@@ -177,47 +365,62 @@
                     float: left;
                 }
             }
-            .main-bottom-right-main{
+            .about-bottom-right-main{
                 padding-top: 20px;
                 >img{
                     float: left;
                     padding-top: 20px;
                 }
-                .main-bottom-right-main-text{
+                .about-bottom-right-main-text{
                     float: right;
-                    width: 450px;
-                    font-size: 14px;
-                    line-height: 20px;
+                    >h3{
+                        font-size: 24px;
+                        color: #565559;
+                        margin-bottom: 0px;
+                    }
+                    >p{
+                       
+                        width: 450px;
+                        font-size: 15px;
+                        line-height: 20px;
+                        color: #565559; 
+                    }
+                    
                 }
             }
-            .main-bottom-right-center{
+            .about-bottom-right-center{
                 padding: 30px 0;
-                .main-bottom-right-center-left{
+                .about-bottom-right-center-left{
                     float: left;
                 }
-                .main-bottom-right-center-right{
+                .about-bottom-right-center-right{
                     float: right;
                 }
                 .line{
                     width: 540px;
                     height: 0px;
-                    border-bottom: 1px dashed red;
+                    border-bottom: 1px dashed #D0D0D0;
                     margin-left: 30px;
                     padding-bottom: 14px;
                 }
             }
-            .main-bottom-right-bottom{
+            .about-bottom-right-bottom{
                 p{
-                    font-size: 14px;
+                    font-size: 15px;
                     margin: 0;
-                    line-height: 22px;
+                    line-height: 24px;
+                    color: #565559;
                 }
             }
-            .main-bottom-right-img{
+            .about-bottom-right-img{
                 height: 60px;
                 width: 100%;
                 padding-top:20px ;
                 line-height: 60px;
+                span{
+                    font-size: 18px;
+                    color: #565559;
+                }
                 .Quotes-left{
                     float: right;
                     padding-top: 40px;
@@ -233,4 +436,3 @@
         }
     }
 }
-
