--- a/scr/less/homepage.less
+++ b/scr/less/homepage.less
@@ -153,6 +153,26 @@
             }
         }
     }
+    .main-bottom-right-center{
+                padding: 30px 0;
+                position: absolute;
+                right:280px;
+                top:500px;
+                z-index: 1;
+                .main-bottom-right-center-left{
+                    float: left;
+                }
+                .main-bottom-right-center-right{
+                    float: right;
+                }
+                .line{
+                    width: 540px;
+                    height: 0px;
+                    border-bottom: 1px dashed #D0D0D0;
+                    margin-left: 30px;
+                    padding-bottom: 14px;
+                }
+    }
     .main-all{
         position: relative;
     }
@@ -212,25 +232,7 @@
                     
                 }
             }
-            .main-bottom-right-center{
-                padding: 30px 0;
-                position: absolute;
-                right:35px;
-                top:215px;
-                .main-bottom-right-center-left{
-                    float: left;
-                }
-                .main-bottom-right-center-right{
-                    float: right;
-                }
-                .line{
-                    width: 540px;
-                    height: 0px;
-                    border-bottom: 1px dashed #D0D0D0;
-                    margin-left: 30px;
-                    padding-bottom: 14px;
-                }
-            }
+            
             .main-bottom-right-bottom{
                 padding-top:80px ;
                 p{
@@ -305,14 +307,14 @@
     background-size: 100%;
     .about-title{
         margin: 0 auto;
-        width: 120px;
+        width: 240px;
         text-align: center;
         padding-top: 40px;
         
         >h3{
             list-style: none;
-            color: #2f1948;
-            font-size: 24px;
+            color: white;
+            font-size: 40px;
             padding: 0;
             margin: 0;
             letter-spacing: 4px;
@@ -321,7 +323,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            color: #2f1948;
+            color: white;
             font-size: 14px;
         }
         >div{
@@ -352,11 +354,10 @@
             width: 600px;
             .about-bottom-right-head{
                 >span{
-                    color: #614d66;
+                    color: white;
                     font-size: 30px;
                     display:block;
                     float: left;
-                    color: #311759;
                 }
                 .pen{
                     float: right;
@@ -388,22 +389,7 @@
                     
                 }
             }
-            .about-bottom-right-center{
-                padding: 30px 0;
-                .about-bottom-right-center-left{
-                    float: left;
-                }
-                .about-bottom-right-center-right{
-                    float: right;
-                }
-                .line{
-                    width: 540px;
-                    height: 0px;
-                    border-bottom: 1px dashed #D0D0D0;
-                    margin-left: 30px;
-                    padding-bottom: 14px;
-                }
-            }
+            
             .about-bottom-right-bottom{
                 p{
                     font-size: 15px;
